# kimchi

./: .gitignore  LICENSE
server/kimchi-api/: pyproject.toml
server/kimchi-api/kimchi_api/: main.py
server/kimchi-api/kimchi_api/models/: receipt.py
